--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.5",
+        "next": "14.2.4",
         "react": "^18",
         "react-dom": "^18",
-        "next": "14.2.4"
+        "react-redux": "^9.1.2",
+        "sass": "^1.77.5"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.4"
+        "typescript": "^5"
     }
 }
