--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@reduxjs/toolkit": "^2.2.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -23,7 +24,9 @@
         "sass": "^1.77.5",
         "shadcn-ui": "^0.8.0",
         "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "usehooks-ts": "^3.1.0",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/node": "^20",
