--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@clerk/nextjs": "^5.1.5",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +26,7 @@
         "react-redux": "^9.1.2",
         "sass": "^1.77.5",
         "shadcn-ui": "^0.8.0",
+        "svix": "^1.24.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
         "usehooks-ts": "^3.1.0",
