feat: added package.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "svix": "^1.24.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
+        "tailwindcss-bg-patterns": "^0.3.0",
         "usehooks-ts": "^3.1.0",
         "zustand": "^4.5.2"
     },
