--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^5.1.5",
+        "@prisma/client": "^5.16.0",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
@@ -21,6 +22,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.395.0",
         "next": "14.2.4",
+        "prisma": "^5.16.0",
         "react": "^18",
         "react-dom": "^18",
         "react-redux": "^9.1.2",
